Fix (L)GPL formatting

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -97,7 +97,7 @@
   description: allows you to use Python features in Fortran 
   categories: interfaces
   tags: dict list tuple numpy python matplotlib scipy
-  license: GNU GPL v3
+  license: GPL-3.0
   version: none
 
 - name: tcp-client-server
@@ -113,7 +113,7 @@
   categories: interfaces
   tags: gpu compute accelerator
   version: none
-  license: GNU GPL v3
+  license: GPL-3.0
 
 - name: M_process
   github: urbanjost/M_process
@@ -377,7 +377,7 @@
   description: INI ParseR and generator
   categories: io 
   tags: config
-  license: GPL-3.0-only
+  license: GPL-3.0
 
 - name: config_fortran
   github: jannisteunissen/config_fortran
@@ -407,14 +407,14 @@
   description: Fortran 2003 interface to OpenGL
   categories: graphics interfaces
   tags: graphics interface opengl
-  license: GNU GPL v3
+  license: GPL-3.0
 
 - name: PLplot
   url: http://plplot.sourceforge.net/
   description: Library for scientific plotting
   categories: graphics interfaces
   tags: plot surface contour interface
-  license: GNU LGPL v3
+  license: LGPL-3.0
   version: 5.15.0
 
 - name: pyplot-fortran
@@ -527,7 +527,7 @@
   description: Fortran Object-Oriented Differential-equations Integration Environment
   categories: numerical
   tags: ode pde euler runge kutta
-  license: GPL-3.0-only
+  license: GPL-3.0
 
 - name: fgsl
   github: reinh-bader/fgsl
@@ -560,7 +560,7 @@
   description: Modules for nonlinear optimization
   categories: numerical
   tags: least squares active set quadratic programming interior point convex programming linear programming
-  license: GNU LGPL v3
+  license: LGPL-3.0
 
 - name: slsqp
   github: jacobwilliams/slsqp
@@ -588,7 +588,7 @@
   description: Pseudo random number generator in Fortran, internally using xoroshiro128+
   categories: numerical
   tags: uniform normal poisson distributed
-  license: GNU GPL v3
+  license: GPL-3.0
   version: none
 
 # --- Scientific codes ---
@@ -633,7 +633,7 @@
   description: quantum chemistry and solid state physics software package that can perform atomistic simulations 
   categories: scientific
   tags: quantum chemistry physics molecular dynamics metadynamics mpi cuda
-  license: GNU GPL V2
+  license: GPL-2.0
 
 - name: Castro
   github: AMReX-Astro/Castro
@@ -647,7 +647,7 @@
   description: The QUIP package is a collection of software tools to carry out molecular dynamics simulations.
   categories: scientific
   tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi qm-mm
-  license: GNU GPL V2
+  license: GPL-2
 
 - name: ABINIT
   github: abinit/abinit
@@ -668,7 +668,7 @@
   description: Finite volume fluid dynamics
   categories: scientific
   tags: godunov riemann euler runge kutta structured
-  license: GNU GPL v3
+  license: GPL-3.0
   version: none
 
 - name: freeCappuccino
@@ -714,7 +714,7 @@
   description: Modules for Experiments in Stellar Astrophysics
   categories: scientific
   tags: stellar astrophysics
-  license: GNU GPL V2
+  license: GPL-2
   version: 12778
 
 - name: WHIZARD
@@ -732,7 +732,7 @@
   description: Easy examples of scientific computing with modern, powerful, easy Fortran 2018 standard
   categories: examples
   tags: block coarray contiguous mpi namelist openmp random submodule iso_fortran_env
-  license: GNU GPL V2
+  license: GPL-2
 
 - name: Fortran patterns
   github: farhanjk/FortranPatterns
