--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -717,7 +717,7 @@
   license: GNU GPL V2
   version: 12778
 
-- name: wannier90
+- name: Wannier90
   github: wannier-developers/wannier90
   description: The Maximally-Localised Generalised Wannier Functions Code
   categories: scientific
