--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -42,7 +42,7 @@ books:
       - link: /learn/building_programs/distributing
 
   - title: Setting up your OS
-    description: How to setup a Fortran developement environment in Windows, Linux and Mac.
+    description: How to setup a Fortran developement environment in Windows, Linux and macOS.
     category: Getting started
     link: /learn/os_setup
     pages:
