Add: Tapenade to package tools

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -222,6 +222,13 @@
   tags:
   license: GPL-3.0
 
+- name: Tapenade
+  url: https://gitlab.inria.fr/tapenade/tapenade
+  description: A tool for automatic differentiation (forward/reverse) of Fortran and c programs
+  categories: programming numerical
+  tags: algorithmic derivative ad
+  license: MIT
+
 # --- Data types ---
 
 - name: Fortran template library
