Add in-depth introduction for Fortran with make

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -39,6 +39,7 @@ books:
       - link: /learn/building_programs/include_files
       - link: /learn/building_programs/managing_libraries
       - link: /learn/building_programs/build_tools
+      - link: /learn/building_programs/project_make
       - link: /learn/building_programs/distributing
 
   - title: Setting up your OS
