Fix incomplete meta data

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -94,6 +94,7 @@
   github: jacobwilliams/Fortran-Astrodynamics-Toolkit
   description: A Modern Fortran Library for Astrodynamics
   categories: libraries
+  license: BSD-3-Clause
 
 # --- Interfaces ---
 
@@ -982,6 +983,7 @@
   github: geodynamics/specfem3d
   description: Simulates acoustic (fluid), elastic (solid), coupled acoustic/elastic, poroelastic or seismic wave propagation in any type of conforming mesh of hexahedra (structured or not)
   categories: scientific
+  version: none
 
 - name: DFT-D4
   github: dftd4/dftd4
