Use: setup-ruby 2.7 in CI

--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -38,6 +38,11 @@ jobs:
         path: ${{env.PUBLISH_DIR}}
         ref: 'gh-pages' 
     
+    # Install ruby 2.7.x
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.7
+
     # Setup Jekyll in SRC_DIR
     - name: Setup Jekyll
       run: |
