--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -979,6 +979,12 @@
   categories: scientific
   version: none
 
+- name: MITgcm
+  github: MITgcm/MITgcm
+  description: M.I.T General Circulation Model master code and documentation repository
+  categories: scientific
+  keywords: ocean-modelling gfd automatic-differentiation data-assimilation exoplanets climate-science
+
 - name: Specfem3D
   github: geodynamics/specfem3d
   description: Simulates acoustic (fluid), elastic (solid), coupled acoustic/elastic, poroelastic or seismic wave propagation in any type of conforming mesh of hexahedra (structured or not)
